--- a/trade_prototype-3.ipynb
+++ b/trade_prototype-3.ipynb
@@ -18,81 +18,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# all this +/- stuff is only really used for the 'current year MOV' prediction & contract value\n",
-    "iv = np.array([72.7 ,  7.28, 18.1 ])\n",
+    "# all this +/- stuff is used for \n",
+    "# * the 'current year MOV' prediction & contract value\n",
+    "# * projecting salary. \n",
+    "def get_pm(ovr):\n",
+    "    iv = np.array([72.7 ,  7.28*2, 18.1/2 ])\n",
+    "    minVal = -2.021381747657189\n",
+    "    return minVal+iv[1]/(1+np.exp(-(ovr-iv[0])/iv[2]))\n",
+    "#plt.plot(np.arange(101),get_pm(np.arange(101)))\n",
+    "#plt.plot(np.arange(101),[o2m[i] for i in np.arange(101)])\n",
+    "#get_pm(50),get_pm(70)\n",
     "\n",
-    "def get_mov(x):\n",
-    "    offset = len(iv)//3\n",
-    "    tot = -2.021381747657189\n",
-    "    for i in range(offset):\n",
-    "        tot += (iv[offset+i])*(np.tanh((x-iv[i])/iv[2*offset+i])+1.0)\n",
-    "    return tot\n",
+    "# replacement level (average min contract signing)\n",
+    "RL = 45.542233117896146\n",
     "\n",
-    "# estimated mov per ovr\n",
-    "o2m = {}\n",
-    "for i in np.arange(101):\n",
-    "    o2m[i] = get_mov(i)\n",
-    "\n",
-    "# replacement level\n",
-    "r_lvl = -1.4351774267651591\n",
+    "# replacement level in MOV\n",
+    "r_lvl = get_pm(RL)\n",
     "\n",
     "age_shift ={19: 6.6,\n",
-    " 20: 7.2,\n",
+    " 20: 7.0,\n",
     " 21: 5.1,\n",
-    " 22: 4.6,\n",
-    " 23: 2.2,\n",
-    " 24: 2.2,\n",
+    " 22: 4.5,\n",
+    " 23: 2.4,\n",
+    " 24: 2.4,\n",
     " 25: 0.2,\n",
     " 26: 0.1,\n",
-    " 27: -1.0,\n",
-    " 28: -1.1,\n",
-    " 29: -1.7,\n",
-    " 30: -2.4,\n",
+    " 27: -0.9,\n",
+    " 28: -1.0,\n",
+    " 29: -1.6,\n",
+    " 30: -2.3,\n",
     " 31: -3.4,\n",
-    " 32: -3.5,\n",
-    " 33: -3.6,\n",
+    " 32: -3.6,\n",
+    " 33: -3.7,\n",
     " 34: -4.7,\n",
-    " 35: -5.0}\n",
-    "\n",
+    " 35: -5.1}\n",
+    "min_age_shift = max(age_shift.values())\n",
     "max_shift = min(age_shift.values())\n",
     "\n",
-    "# replacement level\n",
-    "RL = 44.37\n",
     "\n",
-    "# expected mov, weight for players, weight for salary cap space\n",
-    "weights = {\n",
-    "0 : ( [-0.25, 0.146, -3.696, 0.497] ),\n",
-    "1 : ( [0.599, 12.906, -3.188, 0.366] ),\n",
-    "2 : ( [1.447, 16.979, -2.844, 0.228] ),\n",
-    "}\n",
-    "\n",
-    "# >= 3\n",
-    "weights = {\n",
-    "0 : ( [-3.776, -1.203, 0.491] ),\n",
-    "1 : ( [-2.865, 4.089, 0.359] ),\n",
-    "2 : ( [-2.207, 2.716, 0.215] ),\n",
-    "}\n",
+    "# expected mov weight for salary cap space, , weight for players, \n",
     "\n",
     "# win a round\n",
     "weights = {\n",
-    "0 : ( [-1.591, -0.708, 0.497] ),\n",
-    "1 : ( [-0.898, 3.266, 0.304] ),\n",
-    "2 : ( [-0.543, 2.346, 0.184] ),\n",
-    "\n",
+    "0 : ( [-2.849, -2.235, 0.544] ),\n",
+    "1 : ( [-1.723, 3.316, 0.368] ),\n",
+    "2 : ( [-1.225, 2.212, 0.217] ),\n",
     "}\n",
-    "\n",
     "# draft value. (1) is pos -> %, (2) ovr,pot,age -> %, (3) pos -> ovr\n",
-    "draftP = np.array([0.27988742, 0.30226007, 0.62866095])\n",
+    "draftP = np.array([0.28742864, 0.28181499, 0.61438846])\n",
     "def winp_draft(ovr,pot,age):\n",
-    "    xv = 4.3341 + ovr*0.1294 + pot*0.0343 + age*(-0.7099)\n",
+    "    #xv = 4.3341 + ovr*0.1294 + pot*0.0343 + age*(-0.7099)\n",
+    "    xv = 3.606 + ovr*0.1271 + pot*0.0381 + age*(-0.6824)\n",
     "    return 1/(1+np.exp(-xv))\n",
     "draftOVR= np.array([ -0.07936123,  21.17839312, -28.19483771])\n",
     "\n",
     "# team value\n",
-    "team_mov = [ -0.20384938,   0.3719406,  101.37586688]\n",
+    "team_mov = [-0.21133543900273594, 0.35989254239441687, 96.76582740557117]\n",
     "\n",
     "# salary multiplier\n",
-    "sA = 4.020403849764475"
+    "sA = 3.8"
    ]
   },
   {
@@ -103,12 +87,23 @@
    "source": [
     "age_shift_int = defaultdict(int)\n",
     "age_min,age_max = min(age_shift.keys()),max(age_shift.keys())\n",
-    "total_age_prog = sum([v for k,v in age_shift.items() if v > 0])\n",
-    "for age in range(age_min,age_max):\n",
-    "    left_over = sum([age_shift[_] for _ in range(age,age_max) if age_shift[_] >=0])\n",
-    "    if left_over > 0:\n",
-    "        age_shift_int[age] = left_over/total_age_prog\n",
-    "age_shift_int    "
+    "for draft_age in range(17,27):\n",
+    "    for age in range(draft_age,age_max):\n",
+    "        total = 0\n",
+    "        seen = 0\n",
+    "        for i in range(draft_age,age_max):\n",
+    "            prog = age_shift.get(i,min_age_shift)\n",
+    "            if prog > 0:\n",
+    "                total += prog\n",
+    "        for i in range(draft_age,age):\n",
+    "            prog = age_shift.get(i,min_age_shift)\n",
+    "            if prog > 0:\n",
+    "                seen += prog\n",
+    "        if total > 0:\n",
+    "            frac = 1.0-seen/total\n",
+    "            if frac > 0:\n",
+    "                age_shift_int[(draft_age,age)] = frac\n",
+    "age_shift_int"
    ]
   },
   {
@@ -117,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "team = { 'p' : [(22,66,22000,0),(22,66,22000,1),(22,66,22000,2),(22,66,22000,3)], #(age,ovr,salary,years_left)\n",
+    "team = { 'p' : [(22,66,22000,0,19,50,70,4),(22,66,22000,1,19,50,70,1),(22,66,22000,2,19,50,70,2),(22,66,22000,3,19,50,70,3)], #(age,ovr,salary,years_left,draft_age,draft_ovr,draft_pot,draft_pick)\n",
     "         'd' : [(1, 0, 8.6),(1, 0, -5.35),(2,0,3),(1,1,3),(2,1,3),(1,2,3),(2,2,3),(1,3,3),(2,3,3),(1,4,3),(2,4,3)] #(round,years_left,team_MOV)\n",
     "       }\n",
     "YEARS_TO_MODEL = 3\n",
@@ -146,7 +141,6 @@
     "        \n",
     "        ppow = x[0] + x[1]*cap_space + x[2]*play_s\n",
     "        win_p = 1.0/(1+np.exp(-ppow))\n",
-    "\n",
     "        \n",
     "        pred_win_p.append(win_p)\n",
     "\n",
@@ -169,7 +163,7 @@
     "    dpars = [] # draft value\n",
     "\n",
     "    # analyze existing contracts\n",
-    "    for age,ovr,con,yrl in team['p']:\n",
+    "    for age,ovr,con,yrl,draft_age,draft_ovr,draft_pot,draft_pick in team['p']:\n",
     "        ovr2  = ovr\n",
     "        povrs = [ovr2]\n",
     "        \n",
@@ -179,7 +173,7 @@
     "            povrs.append(ovr2)\n",
     "            \n",
     "        # this is pretty good +/-\n",
-    "        pmovs = [o2m[int(np.clip(np.round(ovr2),0,100))] for ovr2 in povrs]\n",
+    "        pmovs = [get_pm(ovr2) for ovr2 in povrs]\n",
     "        # this is ... okay estimate of fair contract\n",
     "        # assumption: max contract is 1/3 salary cap\n",
     "        ccont = [(sCap/3)*min(1,(pmov-r_lvl)/sA) for pmov in pmovs]\n",
@@ -227,8 +221,10 @@
     "                pars[i].append(ovr)\n",
     "    \n",
     "    # add young player value into long-term estimate\n",
-    "    for age,ovr,con,yrl in team['p']:\n",
-    "        dpars.append(age_shift_int[age]*winp_draft(ovr,ovr,age))\n",
+    "    for age,ovr,con,yrl,draft_age,draft_ovr,draft_pot,draft_pick in team['p']:\n",
+    "        # for real_rosters draft ratings aren't available!\n",
+    "        # dpars.append(age_shift_int.get((draft_age,age),0)*winp_draft(draft_ovr,draft_pot,draft_age))\n",
+    "        dpars.append(age_shift_int.get((draft_age,age),0)* (draftP[1]*np.exp(-draftP[0]*draft_pick**draftP[2])))\n",
     "\n",
     "    value = eval_state(pars,tss,sCap,minS)\n",
     "    #print(pred_movs,win_p,sum(value),sum(dpars))\n",
@@ -268,6 +264,7 @@
     "\n",
     "team_injuries = defaultdict(list)\n",
     "for p in data['players']:\n",
+    "    #draft_age,draft_ovr,draft_pot\n",
     "    if p['tid'] >= 0:\n",
     "        ovr = p['ratings'][-1]['ovr']\n",
     "        age = season - p['born']['year']\n",
@@ -276,7 +273,7 @@
     "        dp = p['draft']['pick'] + 30 * (p['draft']['round']-1)\n",
     "        if dp < 0:\n",
     "            dp = 61\n",
-    "        team_players[p['tid']].append((age,ovr,salary,years_left))\n",
+    "        team_players[p['tid']].append((age,ovr,salary,years_left,p['draft']['year']-p['born']['year'],p['draft']['ovr'],p['draft']['pot'],dp))\n",
     "        team_injuries[p['tid']].append(p['injury']['gamesRemaining'])"
    ]
   },
@@ -300,7 +297,7 @@
     "        if season == ts['season'] and not ts['playoffs'] and ts['gp']>0:\n",
     "            mov = (ts['pts'] - ts['oppPts']) / ts['gp'];\n",
     "            current_mov = mov\n",
-    "        estimated_mov = sum(sorted([o2m[_[1]]*(max(gl-i,0)/gl) for _,i in zip(team_players[tid],team_injuries[tid])])[-10:])\n",
+    "        estimated_mov = sum(sorted([get_pm(_[1])*(max(gl-i,0)/gl) for _,i in zip(team_players[tid],team_injuries[tid])])[-10:])\n",
     "        team_movs[tid] = (gp/82)*current_mov + (gl/82)*estimated_mov    "
    ]
   },
@@ -350,7 +347,7 @@
    "source": [
     "import random\n",
     "deals = []\n",
-    "for i in range(1000):\n",
+    "for i in range(100):\n",
     "    t1 = np.random.randint(30)\n",
     "    t2 = np.random.randint(30)\n",
     "    if t1 == t2:\n",
@@ -391,7 +388,7 @@
    "source": [
     "import random\n",
     "deals = []\n",
-    "for i in range(1000):\n",
+    "for i in range(100):\n",
     "    t1 = np.random.randint(30)\n",
     "    t2 = np.random.randint(30)\n",
     "    if t1 == t2:\n",
@@ -437,7 +434,7 @@
    "source": [
     "import random\n",
     "deals = set()\n",
-    "for i in range(1000):\n",
+    "for i in range(100):\n",
     "    t1 = np.random.randint(30)\n",
     "    t2 = np.random.randint(30)\n",
     "    if t1 == t2:\n",
