--- a/trade_models-3.ipynb
+++ b/trade_models-3.ipynb
@@ -30,8 +30,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = 'equal_bud.json'\n",
-    "data = json.load(open(file,'rt',encoding='utf-8-sig'))\n",
+    "file = '400_s.json' #'equal_bud.json' # eq_fa_fix\n",
+    "data = json.load(open(file,'rt',encoding='utf-8-sig'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "player_ratings = {}\n",
     "player_picks = {}\n",
     "replacement_ovrs = []\n",
@@ -47,6 +56,7 @@
     "draft_salaries = {}\n",
     "\n",
     "draft_pos_avg = {}\n",
+    "made_all_nba = []\n",
     "\n",
     "team_players = defaultdict(set)\n",
     "for p in data['players']:\n",
@@ -99,11 +109,29 @@
     "        if p['draft']['year']+1 == k:\n",
     "            draft_salaries[dp] = a\n",
     "            break\n",
-    "\n",
+    "    all_nba_years = set([_['season'] for _ in p['awards'] if _['type'] == 'First Team All-League'])\n",
+    "    all_nba = [[r['ovr'],int(r['season'] in all_nba_years)] for r in p['ratings']] \n",
+    "    made_all_nba += all_nba\n",
     "#for p in data['players']:\n",
     "#    for r in p['stats']:\n",
     "#        if r['min'] > 0:\n",
     "#            pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "made_all_nba = np.array(made_all_nba)\n",
+    "plt.scatter(made_all_nba[:,0],made_all_nba[:,1],s=5,alpha=0.5)\n",
+    "fTB,fTA = sm.Logit(made_all_nba[:,1],sm.add_constant(made_all_nba[:,0])).fit().params\n",
+    "\n",
+    "xp = np.linspace(0,100)\n",
+    "make_all_nba = 1.0/(1+np.exp(-xp*fTA -fTB))\n",
+    "plt.plot(xp,make_all_nba,c='r')\n",
+    "fTA,fTB"
    ]
   },
   {
@@ -174,8 +202,8 @@
     "        s = season['season']\n",
     "        if season['gp'] >= 82:\n",
     "            they_won = float(season['playoffRoundsWon'] >= 2) # not really finals -- 4\n",
+    "            #they_won = float(season['won'] >= 52)\n",
     "            won_cup[(tid,s)] = they_won\n",
-    "            \n",
     "            season_ratings[s].append((season['won'],team_movs[(tid,s)]))\n",
     "            for i,v in enumerate(sorted([(player_ratings[(_,s)]['ovr'],draft_pos_avg[_]) for _ in team_players[(tid,s)] if _ in draft_pos_avg],reverse=True)):\n",
     "                r,p = v\n",
@@ -208,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xv = 4.3341 + winX[:,0]*0.1294 + winX[:,1]*0.0343 + winX[:,2]*(-0.7099)\n",
+    "xv = 3.606 + winX[:,0]*0.1271 + winX[:,1]*0.0381 + winX[:,2]*(-0.6824)\n",
     "1/(1+np.exp(-xv)),dp_ovr.predict()"
    ]
   },
@@ -401,7 +429,7 @@
     "    return np.linalg.norm(( Xs1 @ np.exp(x[0]*np.arange(10))*x[1]-x[2] - ys1))\n",
     "a,b = np.polyfit(np.arange(10),np.log(np.array(res.params[1:])),1)\n",
     "res2 = opt.minimize(best_fit_func_exp,[a,np.exp(b),101],method='Nelder-Mead')\n",
-    "print(res2.x)"
+    "print(list(res2.x))"
    ]
   },
   {
@@ -452,7 +480,7 @@
    "source": [
     "age_loop = defaultdict(list)\n",
     "for pid,s in player_ratings:\n",
-    "    if player_seasons[pid] < 15:\n",
+    "    if player_seasons[pid] <15:\n",
     "        continue\n",
     "    k = (pid,s)\n",
     "    nk =(pid,s+1)\n",
