--- a/trade_prototype-3.ipynb
+++ b/trade_prototype-3.ipynb
@@ -76,7 +76,12 @@
     "team_mov = [-0.21133543900273594, 0.35989254239441687, 96.76582740557117]\n",
     "\n",
     "# salary multiplier\n",
-    "sA = 3.8"
+    "sA = 3.8\n",
+    "\n",
+    "# chance of making first team based on OVR\n",
+    "def make_first_team(ovr):\n",
+    "    fTA,fTB = 0.609087820132376, -43.9370468620876\n",
+    "    return 1.0/(1+np.exp(-ovr*fTA -fTB))"
    ]
   },
   {
@@ -161,7 +166,8 @@
     "    pars = defaultdict(list) # player value\n",
     "    tss = defaultdict(int)  # contracts\n",
     "    dpars = [] # draft value\n",
-    "\n",
+    "    unique = []\n",
+    "    \n",
     "    # analyze existing contracts\n",
     "    for age,ovr,con,yrl,draft_age,draft_ovr,draft_pot,draft_pick in team['p']:\n",
     "        ovr2  = ovr\n",
@@ -171,7 +177,9 @@
     "        for i in range(max(YEARS_TO_MODEL,yrl)):\n",
     "            ovr2+=age_shift.get(age+i,max_shift)\n",
     "            povrs.append(ovr2)\n",
-    "            \n",
+    "        all_nba = [make_first_team(ovr2) for ovr2 in povrs]\n",
+    "        unique.append(max(all_nba))\n",
+    "        \n",
     "        # this is pretty good +/-\n",
     "        pmovs = [get_pm(ovr2) for ovr2 in povrs]\n",
     "        # this is ... okay estimate of fair contract\n",
@@ -227,8 +235,8 @@
     "        dpars.append(age_shift_int.get((draft_age,age),0)* (draftP[1]*np.exp(-draftP[0]*draft_pick**draftP[2])))\n",
     "\n",
     "    value = eval_state(pars,tss,sCap,minS)\n",
-    "    #print(pred_movs,win_p,sum(value),sum(dpars))\n",
-    "    return sum(value) + sum(dpars)\n",
+    "   # print(sum(value),sum(dpars),sum(unique))\n",
+    "    return sum(value) + sum(dpars) + sum(unique)\n",
     "get_team_value(team,90000,750)"
    ]
   },
