--- a/gmRating.ipynb
+++ b/gmRating.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('hundreds.json','rb') as fp:\n",
+    "with open('hundreds2.json','rb') as fp:\n",
     "    data = json.load(fp)"
    ]
   },
@@ -42,10 +42,10 @@
     "        cap = season['stadiumCapacity']\n",
     "        pop = season['pop']\n",
     "        winp = season['won']/(season['won'] + season['lost'] + season['tied'])\n",
-    "        cost = season['expenses']['salary']['amount'] # payrollEndOfSeason?\n",
-    "        profit = sum([_['amount'] for _ in season['revenues'].values()])-sum([_['amount'] for _ in season['expenses'].values()])\n",
+    "        cost = season['expenses']['salary']['amount']/90000 # payrollEndOfSeason?\n",
+    "        profit = (sum([_['amount'] for _ in season['revenues'].values()])-sum([_['amount'] for _ in season['expenses'].values()]))/90000\n",
     "        playw = season['playoffRoundsWon']\n",
-    "        X.append([cap,pop,winp,cost,profit,playw])\n",
+    "        X.append([team['abbrev'],season['season'],cap,pop,winp,cost,profit,playw])\n",
     "        teamV.append([team['abbrev'],season['season'],season['won']])\n"
    ]
   },
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df =pd.DataFrame(X,columns=['cap','pop','win','cost','profit','playw'])"
+    "df =pd.DataFrame(X,columns=['team','season','cap','pop','win','cost','profit','playw'])"
    ]
   },
   {
@@ -100,7 +100,7 @@
    "outputs": [],
    "source": [
     "def expected_profit(pop,stadium):\n",
-    "    return (stadium/25000) * (pop*2507 + 11373)"
+    "    return (stadium/25000) * (pop*0.031792 + 0.084825)"
    ]
   },
   {
@@ -144,7 +144,7 @@
    "outputs": [],
    "source": [
     "def expected_cost(winp):\n",
-    "    return (winp-0.148660)*257863\n",
+    "    return (winp+0.01474769)*2.010595424083435\n",
     "ev = expected_cost(df.win)\n",
     "ev_idx = ev.idxmax()\n",
     "teamV[ev_idx],ev[ev_idx]"
@@ -180,7 +180,7 @@
    "outputs": [],
    "source": [
     "def expected_costP(playw):\n",
-    "    return (playw+2.9536)*30331.11\n",
+    "    return (playw+4.5)*0.2310155\n",
     "ev = expected_costP(df.win)\n",
     "ev_idx = ev.idxmax()\n",
     "teamV[ev_idx],ev[ev_idx]"
@@ -192,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ev = df['profit']- expected_profit(df['pop'],df['cap']) + (expected_cost(df['win'])-90000) + (expected_costP(df['playw'])-90000)"
+    "ev = df['profit']- expected_profit(df['pop'],df['cap']) + (expected_cost(df['win'])-1) + (expected_costP(df['playw'])-1)"
    ]
   },
   {
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.iloc[874]"
+    "df.iloc[946]"
    ]
   },
   {
@@ -243,6 +243,53 @@
    "source": [
     "ev.mean(),ev.median()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filt = np.array(teamV)[:,1] == '2361'\n",
+    "val = np.array(ev[filt])\n",
+    "team = np.array(teamV)[filt]\n",
+    "for i in np.argsort(val):\n",
+    "    print(val[i],team[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(expected_profit(df['pop'],df['cap']).unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['score'] = ev"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.groupby('team').mean().sort_values('score')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
