--- a/shooting_stats.ipynb
+++ b/shooting_stats.ipynb
@@ -21,7 +21,7 @@
    "outputs": [],
    "source": [
     "shot_data = []\n",
-    "seasons = list(range(2019,2021))\n",
+    "seasons = list(range(2018,2021))\n",
     "for year in seasons:\n",
     "    with open('tables_{}.pkl'.format(year),'rb') as fp:\n",
     "        tables= pickle.load(fp)\n",
@@ -189,7 +189,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "import torch\n"
    ]
   },
   {
@@ -202,6 +202,9 @@
     "    logprobs = torch.nn.functional.log_softmax (input, dim = 1)\n",
     "    return  -(target * logprobs).sum() / input.shape[0]\n",
     "\n",
+    "def LogLoss(input,target):\n",
+    "    return -(target*torch.log(input)).sum()\n",
+    "\n",
     "D_in,D_out = X.shape[1],Y.shape[1]\n",
     "\n",
     "Xt = torch.tensor(X)\n",
@@ -210,31 +213,58 @@
     "w1 = torch.randn(D_in, D_out,requires_grad=True)\n",
     "\n",
     "b0 = torch.ones((D_in),requires_grad=True)\n",
-    "b1 = torch.zeros((D_in),requires_grad=True)\n",
+    "\n",
+    "b1 = torch.randn((D_out),requires_grad=True)\n",
+    "b2 = torch.randn((D_in),requires_grad=True)\n",
+    "b3 = torch.randn((D_in),requires_grad=True)\n",
+    "b4 = torch.zeros((D_out),requires_grad=True)\n",
     "\n",
     "m = torch.nn.Softmax(1)\n",
+    "m3 = torch.nn.Tanh()\n",
+    "m4 = torch.nn.ReLU()\n",
     "\n",
-    "criterion = torch.nn.MSELoss()\n",
-    "optimizer = torch.optim.Adam([w1,b1], lr=1e-3)\n",
-    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min',\n",
-    "    factor=0.1, patience=100, threshold_mode='rel')\n",
+    "H = 4\n",
+    "model = torch.nn.Sequential(\n",
+    "    torch.nn.Linear(D_in, H),\n",
+    "    torch.nn.Tanh(),\n",
+    "    torch.nn.Linear(H, D_out),\n",
+    "    #torch.nn.Tanh(),\n",
+    "    #torch.nn.Linear(H, D_out),\n",
+    ")\n",
+    "\n",
+    "criterion = LogLoss# torch.nn.MSELoss() # LogLoss#\n",
+    "optimizer = torch.optim.Adam([w1,b1,b0,b2,b3,b4]+list(model.parameters()), lr=1e-3)\n",
+    "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min',factor=0.1, patience=200, threshold_mode='rel')\n",
     "#Xt[:,2]  = 0 #mid-ranger missing\n",
     "\n",
     "for t in range(20000):\n",
-    "    vec = torch.matmul(Xt,w1)+b1\n",
-    "    vec[:,2] = 0 # mid-range is leftovers\n",
+    "    vec  =model(Xt)\n",
+    "    #vec = (b0*(Xt))+b1 + m3(b2*Xt+b3)#  torch.matmul(Xt+b1,w1)\n",
+    "    #vec =m4(torch.matmul(Xt,w1)+b4) #  m4(b0*Xt+b1) + m3(b2*Xt+b3) + \n",
+    "    #vec[:,2] = 0 # mid-range is leftovers\n",
     "    y_pred = m(vec)\n",
     "\n",
     "    # Compute and print loss.\n",
-    "    p1 = torch.cat([x.view(-1) for x in[w1,b1]])\n",
     "    loss = criterion(y_pred, Yt) \n",
+    "    p1 = torch.cat([x.view(-1) for x in model.parameters()])\n",
+    "\n",
     "    if (t % 1000) == 0:\n",
-    "        print(t, loss.item())\n",
-    "    loss += 0.0002 * torch.norm(p1, 1)\n",
+    "        print(t, loss.item(),1e-3*torch.norm(p1, 1).item())\n",
+    "    loss += 1e-3*torch.norm(p1, 1)\n",
     "    optimizer.zero_grad()\n",
     "    loss.backward()\n",
     "    optimizer.step()\n",
     "    scheduler.step(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m2 = torch.nn.MSELoss()\n",
+    "m2(y_pred,Yt)"
    ]
   },
   {
@@ -270,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "torch.set_printoptions(precision=2,sci_mode=False)"
+    "torch.set_printoptions(precision=3,sci_mode=False)"
    ]
   },
   {
@@ -316,9 +346,146 @@
    "outputs": [],
    "source": [
     "for i,row in enumerate(dataset.itertuples()):\n",
-    "    if row[1] == 'hardeja01': # curryst01\n",
+    "    if row[1] in ['curryst01','hardeja01']: \n",
     "        print(i,Y[i],y_pred[i])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i,row in enumerate(dataset.itertuples()):\n",
+    "    if row[1] in ['goberru01','jordade01']:\n",
+    "        print(i,Y[i],y_pred[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i,row in enumerate(dataset.itertuples()):\n",
+    "    if row[1] in ['derozde01','bookede01','paulch01']:\n",
+    "        print(i,Y[i],y_pred[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(dataset.shootingThreePointer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(model.parameters())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for m in model.parameters():\n",
+    "    #print(m.shape)\n",
+    "    print(list(m.detach().numpy().T.ravel()),';')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m.detach().numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xt[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vec[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [0]\n",
+    "a = np.array(a)\n",
+    "np.array(a).mean(),np.array(a).std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a2 = 17.6*0.25*(a-0.87)\n",
+    "plt.hist(a2)\n",
+    "plt.title(a2.mean())\n",
+    "a2.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a3 = 0.5+1/(1+np.exp(-a2))\n",
+    "plt.hist(a3)\n",
+    "a3.mean(),a3.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
