--- a/shooting_stats.ipynb
+++ b/shooting_stats.ipynb
@@ -20,8 +20,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "with open('random_league.json','rb') as fp:\n",
+    "    rand = json.load(fp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rand.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rdf1 = []\n",
+    "rdf2 = []\n",
+    "for player in rand['players']:\n",
+    "    for stat in player['stats']:\n",
+    "        if not stat['playoffs']:\n",
+    "            stat['pid'] = player['pid']\n",
+    "            rdf1.append(stat)\n",
+    "    for rate in player['ratings']:\n",
+    "        rate['pid'] = player['pid']\n",
+    "        rdf2.append(rate)\n",
+    "# \n",
+    "#fgAtRim': 44,\n",
+    "#'fgaAtRim': 82,\n",
+    "#'fgLowPost': 16,\n",
+    "#'fgaLowPost': 49,\n",
+    "#'fgMidRange': 30,\n",
+    "#'fgaMidRange': 67,\n",
+    "#'tp': 53,\n",
+    "# 'tpa': 173,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfr = pd.DataFrame(rdf1).set_index(['pid','season']).join(pd.DataFrame(rdf2).set_index(['pid','season']),lsuffix='_stat')\n",
+    "dfr = dfr[dfr['min'] > 500]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "shot_data = []\n",
-    "seasons = list(range(2018,2021))\n",
+    "seasons = list(range(2019,2021))\n",
     "for year in seasons:\n",
     "    with open('tables_{}.pkl'.format(year),'rb') as fp:\n",
     "        tables= pickle.load(fp)\n",
@@ -30,7 +86,7 @@
     "    stables = []\n",
     "    for team in tables:\n",
     "        shoot= tables[team]['shooting']\n",
-    "        shoot_s = shoot[shoot.MP > 850].iloc[:,7:12]\n",
+    "        shoot_s = shoot[shoot.MP > 500].iloc[:,7:12]\n",
     "        stables.append(shoot_s)\n",
     "    shot_dist = pd.concat(stables)\n",
     "    shot_dist['season'] = year\n",
@@ -189,6 +245,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "dfr_stats = dfr[dataset.columns[2:17]]\n",
+    "#randX = np.array(dfr_stats).astype(np.float32)\n",
+    "dfcr = list(dfr_stats.columns)\n",
+    "\n",
+    "dfr_shots = {k:[] for k in const.keys()}\n",
+    "for row in dfr_stats.itertuples():\n",
+    "    for k,v in const.items():\n",
+    "        value = 0\n",
+    "        weights = 0\n",
+    "        for r,w in zip(v['ratings'],v['weights']):\n",
+    "            value += row[dfcr.index(r)+1]*w\n",
+    "            weights +=w\n",
+    "        dfr_shots[k].append(np.clip((value/weights)/100,0,1))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "randX = np.array(pd.DataFrame(dfr_shots)).astype(np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import torch\n"
    ]
   },
@@ -209,52 +295,49 @@
     "\n",
     "Xt = torch.tensor(X)\n",
     "Yt = torch.tensor(Y)\n",
+    "randXt = torch.tensor(randX)\n",
     "\n",
-    "w1 = torch.randn(D_in, D_out,requires_grad=True)\n",
-    "\n",
-    "b0 = torch.ones((D_in),requires_grad=True)\n",
-    "\n",
-    "b1 = torch.randn((D_out),requires_grad=True)\n",
-    "b2 = torch.randn((D_in),requires_grad=True)\n",
-    "b3 = torch.randn((D_in),requires_grad=True)\n",
-    "b4 = torch.zeros((D_out),requires_grad=True)\n",
-    "\n",
-    "m = torch.nn.Softmax(1)\n",
-    "m3 = torch.nn.Tanh()\n",
-    "m4 = torch.nn.ReLU()\n",
     "\n",
     "H = 4\n",
     "model = torch.nn.Sequential(\n",
-    "    torch.nn.Linear(D_in, H),\n",
-    "    torch.nn.Tanh(),\n",
-    "    torch.nn.Linear(H, D_out),\n",
+    "    torch.nn.Linear(D_in, H,bias=False),\n",
+    "    torch.nn.ReLU(),\n",
+    "    torch.nn.Linear(H, H,bias=False),\n",
+    "    torch.nn.ReLU(),\n",
+    "    torch.nn.Linear(H, H,bias=False),\n",
+    "    torch.nn.ReLU(),\n",
+    "    torch.nn.Linear(H, D_out,bias=False),\n",
     "    #torch.nn.Tanh(),\n",
     "    #torch.nn.Linear(H, D_out),\n",
     ")\n",
     "\n",
+    "m = torch.nn.Softmax(1)\n",
+    "\n",
     "criterion = LogLoss# torch.nn.MSELoss() # LogLoss#\n",
-    "optimizer = torch.optim.Adam([w1,b1,b0,b2,b3,b4]+list(model.parameters()), lr=1e-3)\n",
+    "optimizer = torch.optim.Adam(list(model.parameters()), lr=1e-3)\n",
     "scheduler = torch.optim.lr_scheduler.ReduceLROnPlateau(optimizer, mode='min',factor=0.1, patience=200, threshold_mode='rel')\n",
     "#Xt[:,2]  = 0 #mid-ranger missing\n",
+    "randScale =Xt.shape[0]\n",
     "\n",
-    "for t in range(20000):\n",
+    "for t in range(100000):\n",
     "    vec  =model(Xt)\n",
-    "    #vec = (b0*(Xt))+b1 + m3(b2*Xt+b3)#  torch.matmul(Xt+b1,w1)\n",
-    "    #vec =m4(torch.matmul(Xt,w1)+b4) #  m4(b0*Xt+b1) + m3(b2*Xt+b3) + \n",
     "    #vec[:,2] = 0 # mid-range is leftovers\n",
     "    y_pred = m(vec)\n",
     "\n",
     "    # Compute and print loss.\n",
     "    loss = criterion(y_pred, Yt) \n",
     "    p1 = torch.cat([x.view(-1) for x in model.parameters()])\n",
+    "    p1 = 3e-3*torch.norm(p1, 2)\n",
+    "    loss2 =  randScale* criterion(m(model(randXt)).mean(0),Yt.mean(0))\n",
     "\n",
     "    if (t % 1000) == 0:\n",
-    "        print(t, loss.item(),1e-3*torch.norm(p1, 1).item())\n",
-    "    loss += 1e-3*torch.norm(p1, 1)\n",
+    "        print(t, loss.item(),loss2.item(),p1.item())\n",
+    "    loss += p1\n",
+    "    loss += loss2\n",
     "    optimizer.zero_grad()\n",
     "    loss.backward()\n",
     "    optimizer.step()\n",
-    "    scheduler.step(loss)"
+    "    #scheduler.step(loss)"
    ]
   },
   {
@@ -262,9 +345,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "m2 = torch.nn.MSELoss()\n",
-    "m2(y_pred,Yt)"
+    "m2 = torch.nn.MSELoss() # 691\n",
+    "m2(y_pred,Yt),m2(m(model(randXt)).mean(0),Yt.mean(0))"
    ]
   },
   {
@@ -309,34 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(b1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(w1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "y_pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w1[:,3]"
    ]
   },
   {
@@ -396,9 +459,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for m in model.parameters():\n",
+    "for i,m in enumerate(model.parameters()):\n",
     "    #print(m.shape)\n",
-    "    print(list(m.detach().numpy().T.ravel()),';')"
+    "    print('const m{} = '.format(i+1),list(m.detach().numpy().T.ravel()),';')"
    ]
   },
   {
@@ -478,6 +541,24 @@
     "a3 = 0.5+1/(1+np.exp(-a2))\n",
     "plt.hist(a3)\n",
     "a3.mean(),a3.std()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Yt.mean(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred.mean(0)"
    ]
   },
   {
