--- a/fake_rookies.ipynb
+++ b/fake_rookies.ipynb
@@ -40,6 +40,8 @@
    "outputs": [],
    "source": [
     "picks = defaultdict(list)\n",
+    "X = []\n",
+    "y = []\n",
     "i =0 \n",
     "for p in sim['players']:\n",
     "    if int(p['draft']['year']) < 2021:\n",
@@ -47,8 +49,32 @@
     "    pick = (p['draft']['round']-1)*30 + p['draft']['pick']\n",
     "    vec = [p['ratings'][0][k] for k in rate_to_use]\n",
     "    vec = np.array(vec)\n",
+    "    X.append(vec)\n",
+    "    y.append(p['ratings'][0]['ovr'])\n",
     "    picks[pick].append(vec)\n",
     "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "# good enough\n",
+    "clf = sm.OLS(y,sm.add_constant(X)).fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "picks_a = {k: np.array(v) for k,v in picks.items()}\n",
+    "picks_o = {k: np.mean([clf.predict([1] + list(p)) for p in v]) for k,v in picks.items()}\n",
+    "picks_v = {k: np.std([clf.predict([1] + list(p)) for p in v]) for k,v in picks.items()}"
    ]
   },
   {
@@ -67,7 +93,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "roster = json.load(open('1984_draft.json','rb'))"
+    "roster = json.load(open('1947_preseason.json','rb'))"
    ]
   },
   {
@@ -88,9 +114,13 @@
     "    vecN = vec/vec.sum()\n",
     "    if pick not in picks_norm:\n",
     "        pick = -30\n",
-    "    diff = np.linalg.norm(picks_norm[pick]- vecN,axis=1)\n",
-    "    diff_idx = np.argmin(diff)\n",
-    "    stats = picks[pick][diff_idx]\n",
+    "    #diff = np.linalg.norm(picks_norm[pick]- vecN,axis=1)\n",
+    "    #diff_idx = np.argsort(diff)[:3]\n",
+    "    #stats = np.mean(picks_a[pick][diff_idx],0)\n",
+    "    target_ovr = picks_o[pick] + np.random.randn()*picks_v[pick]\n",
+    "    n = (target_ovr - clf.params[0])/np.sum(clf.params[1:]*vecN)\n",
+    "    stats =vecN*n\n",
+    "    \n",
     "    del p['ratings'][0]['ovr']\n",
     "    del p['ratings'][0]['pot']\n",
     "    del p['ratings'][0]['fuzz']\n",
@@ -98,7 +128,9 @@
     "    del p['ratings'][0]['pos']\n",
     "\n",
     "    for k,v in zip(rate_to_use,stats):\n",
-    "        p['ratings'][0][k] = int(v)"
+    "        p['ratings'][0][k] = int(round(np.clip(v,0,100)))\n",
+    "    #if srId == 'alexacl01':\n",
+    "    #    print(pick,np.mean(stats),diff_idx)"
    ]
   },
   {
@@ -107,9 +139,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('1984_fixed.json','wt') as fp:\n",
+    "with open('1947_var.json','wt') as fp:\n",
     "    json.dump(roster,fp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
