--- a/fake_rookies.ipynb
+++ b/fake_rookies.ipynb
@@ -74,7 +74,8 @@
    "source": [
     "picks_a = {k: np.array(v) for k,v in picks.items()}\n",
     "picks_o = {k: np.mean([clf.predict([1] + list(p)) for p in v]) for k,v in picks.items()}\n",
-    "picks_v = {k: np.std([clf.predict([1] + list(p)) for p in v]) for k,v in picks.items()}"
+    "picks_v = {k: np.std([clf.predict([1] + list(p)) for p in v]) for k,v in picks.items()}\n",
+    "avg_v =np.mean(list(picks_v.values()))"
    ]
   },
   {
@@ -102,6 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "draft_noise = {}\n",
     "for p in roster['players']:\n",
     "    if 'srID' not in p:\n",
     "        continue\n",
@@ -114,13 +116,25 @@
     "    vecN = vec/vec.sum()\n",
     "    if pick not in picks_norm:\n",
     "        pick = -30\n",
+    "    # old version, use simulated samples\n",
     "    #diff = np.linalg.norm(picks_norm[pick]- vecN,axis=1)\n",
     "    #diff_idx = np.argsort(diff)[:3]\n",
     "    #stats = np.mean(picks_a[pick][diff_idx],0)\n",
-    "    target_ovr = picks_o[pick] + np.random.randn()*picks_v[pick]\n",
+    "    \n",
+    "    # each draft year gets noise\n",
+    "    year = bio['draftYear']\n",
+    "    if year in draft_noise:\n",
+    "        noise = draft_noise[year]\n",
+    "    else:\n",
+    "        noise = np.random.randn()*avg_v\n",
+    "        draft_noise[year] = noise\n",
+    "    # each pick gets noise\n",
+    "    #noise = np.random.randn()*picks_v[pick]\n",
+    "    target_ovr = picks_o[pick] + noise \n",
     "    n = (target_ovr - clf.params[0])/np.sum(clf.params[1:]*vecN)\n",
     "    stats =vecN*n\n",
     "    \n",
+    "    # let the game recompute these on import\n",
     "    del p['ratings'][0]['ovr']\n",
     "    del p['ratings'][0]['pot']\n",
     "    del p['ratings'][0]['fuzz']\n",
@@ -139,7 +153,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('1947_var.json','wt') as fp:\n",
+    "with open('1947_var2.json','wt') as fp:\n",
     "    json.dump(roster,fp)"
    ]
   },
