--- a/fake_rookies.ipynb
+++ b/fake_rookies.ipynb
@@ -40,11 +40,13 @@
    "outputs": [],
    "source": [
     "picks = defaultdict(list)\n",
+    "picks_by_year = defaultdict(list)\n",
     "X = []\n",
     "y = []\n",
     "i =0 \n",
     "for p in sim['players']:\n",
-    "    if int(p['draft']['year']) < 2021:\n",
+    "    year= p['draft']['year']\n",
+    "    if year < 2021:\n",
     "        continue\n",
     "    pick = (p['draft']['round']-1)*30 + p['draft']['pick']\n",
     "    vec = [p['ratings'][0][k] for k in rate_to_use]\n",
@@ -52,6 +54,8 @@
     "    X.append(vec)\n",
     "    y.append(p['ratings'][0]['ovr'])\n",
     "    picks[pick].append(vec)\n",
+    "    if pick < 31:\n",
+    "        picks_by_year[year].append(vec)\n",
     "    i+=1"
    ]
   },
@@ -75,7 +79,9 @@
     "picks_a = {k: np.array(v) for k,v in picks.items()}\n",
     "picks_o = {k: np.mean([clf.predict([1] + list(p)) for p in v]) for k,v in picks.items()}\n",
     "picks_v = {k: np.std([clf.predict([1] + list(p)) for p in v]) for k,v in picks.items()}\n",
-    "avg_v =np.mean(list(picks_v.values()))"
+    "picks_yr = {k: np.mean([clf.predict([1] + list(p)) for p in v]) for k,v in picks_by_year.items()}\n",
+    "\n",
+    "avg_v =np.std(list(picks_yr.values()))"
    ]
   },
   {
