--- a/real-pos.ipynb
+++ b/real-pos.ipynb
@@ -82,7 +82,7 @@
     "pos_idx = {'PG':0,'SG':1,'SF':2,'PF':3,'C':4,'G':0.5,'F':2.5,'FC':3.5,'GF':1.5}\n",
     "\n",
     "# okay but aren't GFs closer to PGs than SGs? Hair better results but obv different predictions\n",
-    "pos_idx = {'PG':1,'SG':0,'SF':2,'PF':3,'C':4,'G':0.5,'F':2.5,'FC':3.5,'GF':1.5}\n",
+    "#pos_idx = {'PG':1,'SG':0,'SF':2,'PF':3,'C':4,'G':0.5,'F':2.5,'FC':3.5,'GF':1.5}\n",
     "\n",
     "for k,p in data['bios'].items():\n",
     "    pos = pos_idx[p['pos']]\n",
@@ -99,7 +99,7 @@
    "source": [
     "X=np.array(X)\n",
     "y = X[:,0]\n",
-    "X = X/np.mean(X,axis=1,keepdims=1)\n",
+    "#X = X/np.mean(X[:,[False] + [_ != 'hgt2' for _ in cols]],axis=1,keepdims=1)\n",
     "X = pd.DataFrame(X[:,1:],columns=cols)"
    ]
   },
@@ -143,7 +143,7 @@
    "source": [
     "pred = clf.predict(sm.add_constant(X))\n",
     "plt.figure(dpi=200)\n",
-    "plt.scatter(y,pred,s=1,alpha=0.5)\n",
+    "plt.scatter(y,pred,s=2,alpha=0.01)\n",
     "plt.ylim(0,4)\n",
     "yp = list(pos_idx.keys())\n",
     "plt.yticks([pos_idx[k] for k in yp],yp)\n",
