--- a/historical-gen.ipynb
+++ b/historical-gen.ipynb
@@ -93,7 +93,7 @@
     "    {'name':'First Team All-League','bench':False,'rookie':False,'stats':['winp','ewa','vorp','frac_ws']},\n",
     "    {'name':'Sixth','bench':True,'rookie':False,'stats':['winp','pts_g','ewa','vorp','ws']},\n",
     "    {'name':'Rookie of','bench':False,'rookie':True,'stats':['ewa','vorp','pts_g']},\n",
-    "    {'name':'First Team All-Defensive','bench':False,'rookie':False,'stats':['dws','blk_g','stl_g']}\n",
+    "    {'name':'First Team All-Defensive','bench':False,'rookie':False,'stats':['winp','dws','blk_g','stl_g']}\n",
     "    ]\n",
     "for award in awards:\n",
     "    res = []\n",
@@ -127,12 +127,24 @@
     "    x3 = (x2-x2.mean(0))/x2.std(0)\n",
     "    clf = linear_model.LogisticRegressionCV(Cs=100,cv=3,max_iter=250)\n",
     "    clf.fit(x3,df.wonAward)\n",
-    "    print(award['name'])\n",
+    "    \n",
+    "    # eval, lower is better. binary cross entropy loss\n",
+    "    y_hat = clf.predict_proba(x3)[:,1]\n",
+    "    bce = df.wonAward * np.log(y_hat) + (1-df.wonAward) * np.log(1-y_hat)\n",
+    "\n",
+    "    print(award['name'],-round(bce.mean(),3))\n",
     "    C = clf.coef_.ravel() / x2.std(0)\n",
     "    C = C/C.max()\n",
     "    print(round(1/C,1))\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
